# kpmcore

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  CMakeLists.txt  INSTALL  INSTALL.md  KPMcoreConfig.cmake.in  PartitionManagerConfig.cmake.in  README.md  metainfo.yaml
src/: CMakeLists.txt  Messages.sh  XmlMessages.sh  config.kcfgc  partitionmanager.kcfg
src/backend/: CMakeLists.txt  corebackend.cpp  corebackend.h  corebackenddevice.cpp  corebackenddevice.h  corebackendmanager.cpp  corebackendmanager.h  corebackendmanager_p.h  corebackendpartition.h  corebackendpartitiontable.cpp  corebackendpartitiontable.h
src/core/: CMakeLists.txt  copysource.cpp  copysource.h  copysourcedevice.cpp  copysourcedevice.h  copysourcefile.cpp  copysourcefile.h  copysourceshred.cpp  copysourceshred.h  copytarget.cpp  copytarget.h  copytargetbytearray.cpp  copytargetbytearray.h  copytargetdevice.cpp  copytargetdevice.h  copytargetfile.cpp  copytargetfile.h  device.cpp  device.h  device_p.h  devicescanner.cpp  devicescanner.h  diskdevice.cpp  diskdevice.h  fstab.cpp  fstab.h  lvmdevice.cpp  lvmdevice.h  mountentry.cpp  mountentry.h  operationrunner.cpp  operationrunner.h  operationstack.cpp  operationstack.h  partition.cpp  partition.h  partitionalignment.cpp  partitionalignment.h  partitionnode.cpp  partitionnode.h  (+17 more)
src/core/raid/: CMakeLists.txt  softwareraid.cpp  softwareraid.h
src/fs/: CMakeLists.txt  apfs.cpp  apfs.h  bcachefs.cpp  bcachefs.h  bitlocker.cpp  bitlocker.h  btrfs.cpp  btrfs.h  exfat.cpp  exfat.h  ext2.cpp  ext2.h  ext3.cpp  ext3.h  ext4.cpp  ext4.h  extended.cpp  extended.h  f2fs.cpp  f2fs.h  fat12.cpp  fat12.h  fat16.cpp  fat16.h  fat32.cpp  fat32.h  feature.cpp  feature.h  filesystem.cpp  filesystem.h  filesystem_p.h  filesystemfactory.cpp  filesystemfactory.h  freebsdswap.cpp  freebsdswap.h  hfs.cpp  hfs.h  hfsplus.cpp  hfsplus.h  (+40 more)
src/gui/: CMakeLists.txt  decryptluksdialog.cpp  decryptluksdialog.h  decryptluksdialogwidget.cpp  decryptluksdialogwidget.h  decryptluksdialogwidgetbase.ui  partresizerwidget.cpp  partresizerwidget.h  partwidget.cpp  partwidget.h  partwidgetbase.cpp  partwidgetbase.h
src/jobs/: CMakeLists.txt  activateraidjob.cpp  activateraidjob.h  backupfilesystemjob.cpp  backupfilesystemjob.h  changepermissionsjob.cpp  changepermissionsjob.h  checkfilesystemjob.cpp  checkfilesystemjob.h  copyfilesystemjob.cpp  copyfilesystemjob.h  createfilesystemjob.cpp  createfilesystemjob.h  createpartitionjob.cpp  createpartitionjob.h  createpartitiontablejob.cpp  createpartitiontablejob.h  createvolumegroupjob.cpp  createvolumegroupjob.h  deactivatelogicalvolumejob.cpp  deactivatelogicalvolumejob.h  deactivatevolumegroupjob.cpp  deactivatevolumegroupjob.h  deletefilesystemjob.cpp  deletefilesystemjob.h  deletepartitionjob.cpp  deletepartitionjob.h  job.cpp  job.h  movefilesystemjob.cpp  movefilesystemjob.h  movephysicalvolumejob.cpp  movephysicalvolumejob.h  removevolumegroupjob.cpp  removevolumegroupjob.h  resizefilesystemjob.cpp  resizefilesystemjob.h  resizevolumegroupjob.cpp  resizevolumegroupjob.h  restorefilesystemjob.cpp  (+17 more)
src/ops/: CMakeLists.txt  activateraidoperation.cpp  activateraidoperation.h  backupoperation.cpp  backupoperation.h  checkoperation.cpp  checkoperation.h  copyoperation.cpp  copyoperation.h  createfilesystemoperation.cpp  createfilesystemoperation.h  createpartitiontableoperation.cpp  createpartitiontableoperation.h  createvolumegroupoperation.cpp  createvolumegroupoperation.h  deactivatevolumegroupoperation.cpp  deactivatevolumegroupoperation.h  deleteoperation.cpp  deleteoperation.h  newoperation.cpp  newoperation.h  operation.cpp  operation.h  operation_p.h  removevolumegroupoperation.cpp  removevolumegroupoperation.h  resizeoperation.cpp  resizeoperation.h  resizevolumegroupoperation.cpp  resizevolumegroupoperation.h  restoreoperation.cpp  restoreoperation.h  setfilesystemlabeloperation.cpp  setfilesystemlabeloperation.h  setpartflagsoperation.cpp  setpartflagsoperation.h  setpartlabeloperation.cpp  setpartlabeloperation.h  takeownershipoperation.cpp  takeownershipoperation.h
src/plugins/: CMakeLists.txt  pmcorebackendplugin.desktop
src/plugins/dummy/: CMakeLists.txt  dummybackend.cpp  dummybackend.h  dummydevice.cpp  dummydevice.h  dummypartition.cpp  dummypartition.h  dummypartitiontable.cpp  dummypartitiontable.h  pmdummybackendplugin.desktop  pmdummybackendplugin.json
src/plugins/geom/: CMakeLists.txt  geombackend.cpp  geombackend.h  geomdevice.cpp  geomdevice.h  geompartitiontable.cpp  geompartitiontable.h  pmgeombackendplugin.json
src/plugins/gpart/: CMakeLists.txt  gpartbackend.cpp  gpartbackend.h  gpartdevice.cpp  gpartdevice.h  gpartpartitiontable.cpp  gpartpartitiontable.h  pmgpartbackendplugin.json
src/plugins/libparted/: CMakeLists.txt  libpartedbackend.cpp  libpartedbackend.h  libparteddevice.cpp  libparteddevice.h  libpartedpartition.cpp  libpartedpartition.h  libpartedpartitiontable.cpp  libpartedpartitiontable.h  pedflags.h  pmlibpartedbackendplugin.desktop  pmlibpartedbackendplugin.json
src/plugins/sfdisk/: CMakeLists.txt  pmsfdiskbackendplugin.desktop  pmsfdiskbackendplugin.json  sfdiskbackend.cpp  sfdiskbackend.h  sfdiskdevice.cpp  sfdiskdevice.h  sfdiskgptattributes.cpp  sfdiskpartition.cpp  (+4 more)
src/util/: CMakeLists.txt  capacity.cpp  capacity.h  externalcommand.cpp  externalcommand.h  externalcommand_trustedprefixes.h.in  externalcommand_whitelist.h  externalcommandhelper.cpp  externalcommandhelper.h  globallog.cpp  globallog.h  helpers.cpp  helpers.h  htmlreport.cpp  htmlreport.h  ismounted.c  ismounted.h  libpartitionmanagerexport.h  mdadmupdateconf.cpp  org.kde.kpmcore.applicationinterface.conf  org.kde.kpmcore.externalcommand.actions  org.kde.kpmcore.externalcommand.policy  org.kde.kpmcore.helperinterface.conf  org.kde.kpmcore.helperinterface.service.in  report.cpp  report.h  trustedprefixes
test/: CMakeLists.txt  helpers.cpp  helpers.h  test_fstab.cpp  testdevice.cpp  testdevice.h  testdevicescanner.cpp  testexternalcommand.cpp  testinit.cpp  testlist.cpp  testsmart.cpp
test/test_fstab_data/: fstab
(+104 files in other folders)
